# libhearsay

./: .gitignore  CMakeLists.txt  doxygen.cfg
src/: hearsay.h  hearsay_http.h  hearsay_message.c  hearsay_message.h  http.h  message.c  message.h
tests/cunit/: hearsay_cunit.c  text_hearsay.c
