cmake_minimum_required (VERSION 2.8)
project (Hearsay C)
set (Hearsay_VERSION_MAJOR 0)
set (Hearsay_VERSION_MINOR 0)
set (Hearsay_PATCH_VERSION 0)
set (Hearsay_VERSION
   ${Hearsay_MAJOR_VERSION}.${Hearsay_MINOR_VERSION}.${Hearsay_PATCH_VERSION})
find_library (GNUTLS_LIBRARY gnutls)
add_library (hearsay SHARED src/message.c)
target_link_libraries (hearsay ${GNUTLS_LIBRARY})
if (CMAKE_COMPILER_IS_GNUCC)
	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -std=c99 -fpic")
endif (CMAKE_COMPILER_IS_GNUCC)
install (TARGETS hearsay
         LIBRARY DESTINATION lib)
install(DIRECTORY src/ DESTINATION include/hearsay
          FILES_MATCHING PATTERN "*.h")
enable_testing ()
find_library (CUNIT_LIBRARY cunit)
add_executable (cunit_text_hearsay tests/cunit/text_hearsay.c)
target_link_libraries (cunit_text_hearsay ${CUNIT_LIBRARY} hearsay)
add_test (cunit_text_hearsay_test cunit_text_hearsay)
